api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels: { app: api-gateway }
  template:
    metadata:
      labels: { app: api-gateway }
    spec:
      containers:
        - name: api-gateway
          image: 641379500030.dkr.ecr.ap-south-1.amazonaws.com/shop/shopping-app:api-gateway-16
          ports: [{ containerPort: 8080 }]
          resources:
            requests: { cpu: "50m", memory: "96Mi" }
            limits: { cpu: "250m", memory: "256Mi" }
          readinessProbe:
            httpGet: { path: /health, port: 8080 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /health, port: 8080 }
            initialDelaySeconds: 10
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: ecommerce
spec:
  selector: { app: api-gateway }
  ports: [{ port: 8080, targetPort: 8080 }]
