mongo-product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-product
  namespace: ecommerce
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: { app: mongo-product }
  template:
    metadata:
      labels: { app: mongo-product }
    spec:
      containers:
        - name: mongo
          image: mongo:7
          ports: [{ containerPort: 27017 }]
          volumeMounts:
            - { name: data, mountPath: /data/db }
          readinessProbe:
            exec: { command: ["mongosh", "--quiet", "--eval", "db.runCommand({ping:1})"] }
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            exec: { command: ["mongosh", "--quiet", "--eval", "db.runCommand({ping:1})"] }
            initialDelaySeconds: 20
            periodSeconds: 15
      volumes:
        - name: data
          persistentVolumeClaim: { claimName: mongo-product-pvc }
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-product
  namespace: ecommerce
spec:
  selector: { app: mongo-product }
  ports: [{ port: 27017, targetPort: 27017 }]
