order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels: { app: order-service }
  template:
    metadata:
      labels: { app: order-service }
    spec:
      containers:
        - name: order-service
          image: 641379500030.dkr.ecr.ap-south-1.amazonaws.com/shop/shopping-app:order-service-14
          ports: [{ containerPort: 4003 }]
          resources:
            requests: { cpu: "50m", memory: "96Mi" }
            limits: { cpu: "250m", memory: "256Mi" }
          readinessProbe:
            httpGet: { path: /health, port: 4003 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /health, port: 4003 }
            initialDelaySeconds: 10
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: ecommerce
spec:
  selector: { app: order-service }
  ports: [{ port: 4003, targetPort: 4003 }]
